--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Signika Negative", sans-serif;
+  font-size: large;
 }
 
 html,
